--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -272,14 +272,15 @@ screen.COLORS=Colors
             screen.ACES.comment=Academy Color Encoding System.
             
             option.USER_OUTPUT_COLORSPACE=Output Colorspace
-                option.USER_OUTPUT_COLORSPACE.comment=The color space to transform the screen to. Works separately from Iris's color space setting. Use sRGB if unsure. §cMay not work when "Use LUT" is enabled!
+                option.USER_OUTPUT_COLORSPACE.comment=The color space to transform the screen to. Works separately from Iris's color space setting. Selecting "Linear AP1" does not transform the image, as that is the shader's internal colorspace. §bUse sRGB if unsure. §cMay not work when "Use LUT" is enabled!
                 value.USER_OUTPUT_COLORSPACE.0=sRGB (default)
                 value.USER_OUTPUT_COLORSPACE.1=Linear RGB
                 value.USER_OUTPUT_COLORSPACE.2=Gamma 2.2 RGB
-                value.USER_OUTPUT_COLORSPACE.3=Linear ACEScg
-                value.USER_OUTPUT_COLORSPACE.4=Gamma 2.2 ACEScg
-                value.USER_OUTPUT_COLORSPACE.5=Linear ACES2065-1
-                value.USER_OUTPUT_COLORSPACE.6=Gamma 2.2 ACES2065-1
+                value.USER_OUTPUT_COLORSPACE.3=Linear AP1 (ACEScg)
+                value.USER_OUTPUT_COLORSPACE.4=Gamma 2.2 AP1 (ACEScg)
+                value.USER_OUTPUT_COLORSPACE.5=Linear AP0 (ACES2065-1)
+                value.USER_OUTPUT_COLORSPACE.6=Gamma 2.2 AP0 (ACES2065-1)
+                value.USER_OUTPUT_COLORSPACE.7=Linear XYZ
 
             option.USER_LMT_MODE=Tonemapper
                 option.USER_LMT_MODE.comment=Compresses the game's "realistic" light values into ones your monitor can display. (and does so in a way that looks nice). §cMay not work when "Use LUT" is enabled!
