Improved color settings

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -274,8 +274,8 @@ screen.COLORS=Colors
             option.USER_OUTPUT_COLORSPACE=Output Colorspace
                 option.USER_OUTPUT_COLORSPACE.comment=The color space to transform the screen to. Works separately from Iris's color space setting. Selecting "Linear AP1" does not transform the image, as that is the shader's internal colorspace. §bUse sRGB if unsure. §cMay not work when "Use LUT" is enabled!
                 value.USER_OUTPUT_COLORSPACE.0=sRGB (default)
-                value.USER_OUTPUT_COLORSPACE.1=Linear RGB
-                value.USER_OUTPUT_COLORSPACE.2=Gamma 2.2 RGB
+                value.USER_OUTPUT_COLORSPACE.1=Linear sRGB
+                value.USER_OUTPUT_COLORSPACE.2=Gamma 2.2 sRGB
                 value.USER_OUTPUT_COLORSPACE.3=Linear AP1 (ACEScg)
                 value.USER_OUTPUT_COLORSPACE.4=Gamma 2.2 AP1 (ACEScg)
                 value.USER_OUTPUT_COLORSPACE.5=Linear AP0 (ACES2065-1)
