--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -30,8 +30,8 @@ screen.POST_PROCESSING=Post Processing
     option.EXPOSURE=Exposure
         option.EXPOSURE.comment=Increases the brightness of the image while preserving dark areas. No performance impact.
 
-    option.POST_SATURATION=Vibrance
-        option.POST_SATURATION.comment=Also known as saturation. Increases the strength of colors in your world.
+    option.SATURATION=Vibrance
+        option.SATURATION.comment=Also known as saturation. Increases the strength of colors in your world.
 
     option.DITHERING_MODE=Dithering
         option.DITHERING_MODE.comment=Slightly randomizes pixel colors to get rid of ugly bands of color (for instance, ones visible in the sky) that form when your monitor can't display color precisely enough. Does not work when Render Quality is greater than 1x.  On ➤ Minimal performance hit.
