Improved settings relating to recent additions

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -299,18 +299,25 @@ screen.COLORS=Colors
             screen.ACES.comment=Academy Color Encoding System.
             
             option.OUTPUT_COLORSPACE=Output Colorspace
-                option.OUTPUT_COLORSPACE.comment=The color space to transform the screen to. Works separately from Iris's color space setting. Selecting "Linear AP1" does not transform the image, as that is the shader's internal colorspace. §bUse sRGB if unsure. §cMay not work when "Use LUT" is enabled!
-                value.OUTPUT_COLORSPACE.0=sRGB (default)
-                value.OUTPUT_COLORSPACE.1=Linear sRGB
-                value.OUTPUT_COLORSPACE.2=Gamma 2.2 sRGB
-                value.OUTPUT_COLORSPACE.3=Linear AP1 (ACEScg)
-                value.OUTPUT_COLORSPACE.4=Gamma 2.2 AP1 (ACEScg)
-                value.OUTPUT_COLORSPACE.5=Linear AP0 (ACES2065-1)
-                value.OUTPUT_COLORSPACE.6=Gamma 2.2 AP0 (ACES2065-1)
-                value.OUTPUT_COLORSPACE.7=Linear XYZ
+                option.OUTPUT_COLORSPACE.comment=The color space to transform the screen to. Works separately from Iris's color space setting. Selecting "Linear AP1" does not transform the image, as that is the shader's internal colorspace. §bUse Auto if unsure.
+                value.OUTPUT_COLORSPACE.-1=Auto
+                value.OUTPUT_COLORSPACE.0=sRGB
+                value.OUTPUT_COLORSPACE.1=DCI-P3
+                value.OUTPUT_COLORSPACE.2=Display P3
+                value.OUTPUT_COLORSPACE.3=Rec. 2020
+                value.OUTPUT_COLORSPACE.4=Adobe RGB
+                value.OUTPUT_COLORSPACE.5=P3-D65
+                value.OUTPUT_COLORSPACE.6=Rec. 709
+                value.OUTPUT_COLORSPACE.7=Rec. 2100 (HLG)
+                value.OUTPUT_COLORSPACE.8=Rec. 2100 (PQ)
+                value.OUTPUT_COLORSPACE.9=ACEScg
+                value.OUTPUT_COLORSPACE.10=ACES2065-1
+                value.OUTPUT_COLORSPACE.11=Linear RGB
+                value.OUTPUT_COLORSPACE.12=XYZ
 
             option.TONEMAP_USER=Tonemapper
                 option.TONEMAP_USER.comment=Compresses the game's "realistic" light values into ones your monitor can display. (and does so in a way that looks nice). §cMay not work when "Use LUT" is enabled!
+                value.TONEMAP_USER.-1=LUT
                 value.TONEMAP_USER.0=§cNone (not recommended)
                 value.TONEMAP_USER.1=§6Reinhard
                 value.TONEMAP_USER.2=§6Hybrid Log-Gamma (HLG)
@@ -345,7 +352,7 @@ screen.MISC=Extras
             value.BRIGHT_NETHER.true=On
             value.BRIGHT_NETHER.false=Off
 
-        option.INVISIBILITY_DISTORTION=Distort Screen When Invisible
+        option.INVISIBILITY_DISTORTION=Invisibility Distortion
             option.INVISIBILITY_DISTORTION.comment=Adds a distortion effect when drinking an invisibility potion. This effect is exclusive to Iris. §cDoes not work with Optifine! On ➤ Minimal performance hit.
             value.INVISIBILITY_DISTORTION.0=Off
             value.INVISIBILITY_DISTORTION.1=Distort
