--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -320,9 +320,9 @@ screen.COLORS=Colors
                 value.TONEMAP_USER.-1=LUT
                 value.TONEMAP_USER.0=§cNone (not recommended)
                 value.TONEMAP_USER.1=§6Reinhard
-                value.TONEMAP_USER.2=§6Hybrid Log-Gamma (HLG)
-                value.TONEMAP_USER.3=Hable (Uncharted 2)
-                value.TONEMAP_USER.4=Hill ACES (Unreal Engine)
+                value.TONEMAP_USER.2=Hable (Uncharted 2)
+                value.TONEMAP_USER.3=Hill ACES (Unreal Engine)
+                value.TONEMAP_USER.4=Approximate ACES
                 value.TONEMAP_USER.5=Pixel Perfect (Modded Hill ACES)
 
 screen.RESOURCEPACK=Resourcepack Settings
