Renamed aliases for ocnsistency

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -298,22 +298,22 @@ screen.COLORS=Colors
         screen.ACES=ACES
             screen.ACES.comment=Academy Color Encoding System.
             
-            option.OUTPUT_COLORSPACE=Output Colorspace
-                option.OUTPUT_COLORSPACE.comment=The color space to transform the screen to. Works separately from Iris's color space setting. Selecting "Linear AP1" does not transform the image, as that is the shader's internal colorspace. §bUse Auto if unsure.
-                value.OUTPUT_COLORSPACE.-1=Auto
-                value.OUTPUT_COLORSPACE.0=sRGB
-                value.OUTPUT_COLORSPACE.1=DCI-P3
-                value.OUTPUT_COLORSPACE.2=Display P3
-                value.OUTPUT_COLORSPACE.3=Rec. 2020
-                value.OUTPUT_COLORSPACE.4=Adobe RGB
-                value.OUTPUT_COLORSPACE.5=P3-D65
-                value.OUTPUT_COLORSPACE.6=Rec. 709
-                value.OUTPUT_COLORSPACE.7=Rec. 2100 (HLG)
-                value.OUTPUT_COLORSPACE.8=Rec. 2100 (PQ)
-                value.OUTPUT_COLORSPACE.9=ACEScg
-                value.OUTPUT_COLORSPACE.10=ACES2065-1
-                value.OUTPUT_COLORSPACE.11=Linear RGB
-                value.OUTPUT_COLORSPACE.12=XYZ
+            option.COLORSPACE_OUTPUT=Output Colorspace
+                option.COLORSPACE_OUTPUT.comment=The color space to transform the screen to. Works separately from Iris's color space setting. Selecting "Linear AP1" does not transform the image, as that is the shader's internal colorspace. §bUse Auto if unsure.
+                value.COLORSPACE_OUTPUT.-1=Auto
+                value.COLORSPACE_OUTPUT.0=sRGB
+                value.COLORSPACE_OUTPUT.1=DCI-P3
+                value.COLORSPACE_OUTPUT.2=Display P3
+                value.COLORSPACE_OUTPUT.3=Rec. 2020
+                value.COLORSPACE_OUTPUT.4=Adobe RGB
+                value.COLORSPACE_OUTPUT.5=P3-D65
+                value.COLORSPACE_OUTPUT.6=Rec. 709
+                value.COLORSPACE_OUTPUT.7=Rec. 2100 (HLG)
+                value.COLORSPACE_OUTPUT.8=Rec. 2100 (PQ)
+                value.COLORSPACE_OUTPUT.9=ACEScg
+                value.COLORSPACE_OUTPUT.10=ACES2065-1
+                value.COLORSPACE_OUTPUT.11=Linear RGB
+                value.COLORSPACE_OUTPUT.12=XYZ
 
             option.TONEMAP_USER=Tonemapper
                 option.TONEMAP_USER.comment=Compresses the game's "realistic" light values into ones your monitor can display. (and does so in a way that looks nice). §cMay not work when "Use LUT" is enabled!
